@@ -1,5 +1,7 @@
 When making a world, a house with a few chests will spawn at the spawn point, and another will spawn on a beach.
 
+This mod has Magic Storage integration! A starter setup will spawn with the main house (can be turned off in configs).
+
 Use Mod Configs to enable/disable generation of any house.
 
 If you liked the mod, please give a mod a rating! If you didn't like it, that's cool too! If you're willing to, a comment about why you didn't like it would be appreciated!
